--- a/Test.ipynb
+++ b/Test.ipynb
@@ -33,7 +33,7 @@
     "        self.weights = []\n",
     "        self.biases = []\n",
     "    \n",
-    "    # Class Methods\n",
+    "    # Add a fully connected layer\n",
     "    def add_dense_layer(self, size, input_size = 0, activation = 'linear'):\n",
     "        self.num_layers += 1\n",
     "        self.layers_info['Layer_'+str(self.num_layers)] = {\n",
@@ -47,12 +47,24 @@
     "            self.weights.append(np.zeros((size, self.layers_info['Layer_'+str(self.num_layers-1)]['size'])))\n",
     "        self.biases.append(np.zeros(size))\n",
     "        \n",
+    "    # Selection of Loss Function and Optimization function\n",
     "    def add_functions(self, lr = 0.01, loss = 'mse', optimizer = 'gd'):\n",
-    "        pass\n",
+    "        if loss == 'mse':\n",
+    "            pass\n",
+    "        if optimizer == 'gd':\n",
+    "            pass\n",
     "    \n",
+    "    # Forward Propogation\n",
+    "    def neural_network_output(self, X_train, y_train):\n",
+    "        for i in range(self.layers):\n",
+    "            \n",
+    "        \n",
+    "    # Training using Backpropogation\n",
     "    def train(X_train, y_train, epochs = 1):\n",
-    "        pass\n",
-    "        "
+    "        while epochs:\n",
+    "            for record, label in zip(X_train, y_train):\n",
+    "                predicted_output = self.neural_network_output(X_train, y_train)\n",
+    "                "
    ]
   },
   {
