Created Package and added Perceptron

--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -919,6 +919,25 @@
     "print(model.predict(X_train), model.predict(np.array([[1,1]])))\n",
     "model.evaluate(X_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[1.45246857, 1.70944295]])]\n",
+      "[array([-0.29142836])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.weights)\n",
+    "print(model.biases)"
+   ]
   }
  ],
  "metadata": {
