Completed testing Iris dataset

--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -132,7 +132,7 @@
     "        elif activation == 'softmax':\n",
     "            return output_vector_i * (1 - output_vector_i)\n",
     "        else:\n",
-    "            return output_vector_i * (1 - output_vector_i)\n",
+    "            pass\n",
     "    \n",
     "    # For hidden layer\n",
     "    # dE/dnet_sum_hidden = dotproduct(weights_ji, delta_o)\n",
