Added Cross Entropy Loss and Tanh Activation

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,10 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from neural_networks import Model\n",
+    "from neural_networks.preprocessing import one_hot_encoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Model()\n",
+    "\n",
+    "model.add_dense_layer(4, 3, activation='relu')\n",
+    "model.add_dense_layer(1, activation='sigmoid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = np.array([[0, 0, 1], [0, 1, 1], [1, 0, 1], [0, 1, 0], [1, 0, 0], [1, 1, 1], [0, 0, 0]])\n",
+    "y_train = np.array([0, 1, 1, 1, 1, 0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.set_parameters(lr=0.1, loss='mse', optimization='sgd')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.train(X_train, y_train, epochs=1000, batch_size=1)"
+   ]
   }
  ],
  "metadata": {
