--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,40 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.utils import shuffle\n",
     "from neural_networks import Model\n",
     "from neural_networks.preprocessing import one_hot_encoded"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Model()\n",
     "\n",
-    "model.add_dense_layer(4, 3, activation='relu')\n",
-    "model.add_dense_layer(1, activation='sigmoid')"
+    "model.add_dense_layer(7, 4, activation='relu')\n",
+    "model.add_dense_layer(3, activation='softmax')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = np.array([[0, 0, 1], [0, 1, 1], [1, 0, 1], [0, 1, 0], [1, 0, 0], [1, 1, 1], [0, 0, 0]])\n",
-    "y_train = np.array([0, 1, 1, 1, 1, 0, 0])"
+    "data = pd.read_csv('iris.csv')\n",
+    "data = shuffle(data.values)[:,1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split = 0.8\n",
+    "total = len(data)\n",
+    "split_index = int(total * split)\n",
+    "\n",
+    "X, y = data[:,:-1], data[:,-1]\n",
+    "X_train, y_train = X[:split_index,].astype(float), y[:split_index,]\n",
+    "X_test, y_test = X[split_index:,].astype(float), y[split_index:,]\n",
+    "\n",
+    "y_train = one_hot_encoded(y_train)\n",
+    "y_test = one_hot_encoded(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +64,227 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch  0\n",
+      "Loss:  0.09501601121552336\n",
+      "Accuracy:  0.65\n",
+      "\n",
+      "Epoch  1\n",
+      "Loss:  0.07297052946892223\n",
+      "Accuracy:  0.6833333333333333\n",
+      "\n",
+      "Epoch  2\n",
+      "Loss:  0.06731459474765816\n",
+      "Accuracy:  0.6666666666666666\n",
+      "\n",
+      "Epoch  3\n",
+      "Loss:  0.0659419750119793\n",
+      "Accuracy:  0.65\n",
+      "\n",
+      "Epoch  4\n",
+      "Loss:  0.06148382518375027\n",
+      "Accuracy:  0.8\n",
+      "\n",
+      "Epoch  5\n",
+      "Loss:  0.05974254556101432\n",
+      "Accuracy:  0.8333333333333334\n",
+      "\n",
+      "Epoch  6\n",
+      "Loss:  0.05834999076496873\n",
+      "Accuracy:  0.8416666666666667\n",
+      "\n",
+      "Epoch  7\n",
+      "Loss:  0.05649107191863227\n",
+      "Accuracy:  0.8833333333333333\n",
+      "\n",
+      "Epoch  8\n",
+      "Loss:  0.05501479922844161\n",
+      "Accuracy:  0.8916666666666667\n",
+      "\n",
+      "Epoch  9\n",
+      "Loss:  0.05446480687470664\n",
+      "Accuracy:  0.875\n",
+      "\n",
+      "Epoch  10\n",
+      "Loss:  0.05037246281972033\n",
+      "Accuracy:  0.9583333333333334\n",
+      "\n",
+      "Epoch  11\n",
+      "Loss:  0.04956216056332157\n",
+      "Accuracy:  0.9416666666666667\n",
+      "\n",
+      "Epoch  12\n",
+      "Loss:  0.04742500342872148\n",
+      "Accuracy:  0.95\n",
+      "\n",
+      "Epoch  13\n",
+      "Loss:  0.050041504719253616\n",
+      "Accuracy:  0.875\n",
+      "\n",
+      "Epoch  14\n",
+      "Loss:  0.04418377118095442\n",
+      "Accuracy:  0.9333333333333333\n",
+      "\n",
+      "Epoch  15\n",
+      "Loss:  0.04789667400069726\n",
+      "Accuracy:  0.8666666666666667\n",
+      "\n",
+      "Epoch  16\n",
+      "Loss:  0.041448783478488\n",
+      "Accuracy:  0.9333333333333333\n",
+      "\n",
+      "Epoch  17\n",
+      "Loss:  0.04604885555494461\n",
+      "Accuracy:  0.8666666666666667\n",
+      "\n",
+      "Epoch  18\n",
+      "Loss:  0.04691418056938854\n",
+      "Accuracy:  0.85\n",
+      "\n",
+      "Epoch  19\n",
+      "Loss:  0.04087618202185742\n",
+      "Accuracy:  0.9083333333333333\n",
+      "\n",
+      "Epoch  20\n",
+      "Loss:  0.050990375362071856\n",
+      "Accuracy:  0.8083333333333333\n",
+      "\n",
+      "Epoch  21\n",
+      "Loss:  0.03579099173817784\n",
+      "Accuracy:  0.925\n",
+      "\n",
+      "Epoch  22\n",
+      "Loss:  0.0488299996513276\n",
+      "Accuracy:  0.825\n",
+      "\n",
+      "Epoch  23\n",
+      "Loss:  0.05752739351392449\n",
+      "Accuracy:  0.725\n",
+      "\n",
+      "Epoch  24\n",
+      "Loss:  0.03574009167727524\n",
+      "Accuracy:  0.9083333333333333\n",
+      "\n",
+      "Epoch  25\n",
+      "Loss:  0.043941922663212125\n",
+      "Accuracy:  0.85\n",
+      "\n",
+      "Epoch  26\n",
+      "Loss:  0.046093959384634745\n",
+      "Accuracy:  0.8416666666666667\n",
+      "\n",
+      "Epoch  27\n",
+      "Loss:  0.03978683704404941\n",
+      "Accuracy:  0.8583333333333333\n",
+      "\n",
+      "Epoch  28\n",
+      "Loss:  0.04261980028490386\n",
+      "Accuracy:  0.85\n",
+      "\n",
+      "Epoch  29\n",
+      "Loss:  0.04135681812056747\n",
+      "Accuracy:  0.85\n",
+      "\n",
+      "Epoch  30\n",
+      "Loss:  0.040188184759268504\n",
+      "Accuracy:  0.8583333333333333\n",
+      "\n",
+      "Epoch  31\n",
+      "Loss:  0.03898561589099974\n",
+      "Accuracy:  0.8583333333333333\n",
+      "\n",
+      "Epoch  32\n",
+      "Loss:  0.0378062369232083\n",
+      "Accuracy:  0.8583333333333333\n",
+      "\n",
+      "Epoch  33\n",
+      "Loss:  0.03661405665884158\n",
+      "Accuracy:  0.8666666666666667\n",
+      "\n",
+      "Epoch  34\n",
+      "Loss:  0.03541708375765723\n",
+      "Accuracy:  0.875\n",
+      "\n",
+      "Epoch  35\n",
+      "Loss:  0.034208710827432175\n",
+      "Accuracy:  0.875\n",
+      "\n",
+      "Epoch  36\n",
+      "Loss:  0.033038888980509815\n",
+      "Accuracy:  0.875\n",
+      "\n",
+      "Epoch  37\n",
+      "Loss:  0.031911513552217344\n",
+      "Accuracy:  0.875\n",
+      "\n",
+      "Epoch  38\n",
+      "Loss:  0.03224382828578037\n",
+      "Accuracy:  0.875\n",
+      "\n",
+      "Epoch  39\n",
+      "Loss:  0.02985976241773332\n",
+      "Accuracy:  0.8916666666666667\n",
+      "\n",
+      "Epoch  40\n",
+      "Loss:  0.030139293357166162\n",
+      "Accuracy:  0.8916666666666667\n",
+      "\n",
+      "Epoch  41\n",
+      "Loss:  0.029258211895903528\n",
+      "Accuracy:  0.9\n",
+      "\n",
+      "Epoch  42\n",
+      "Loss:  0.028303472288950842\n",
+      "Accuracy:  0.9\n",
+      "\n",
+      "Epoch  43\n",
+      "Loss:  0.027366670192779687\n",
+      "Accuracy:  0.9083333333333333\n",
+      "\n",
+      "Epoch  44\n",
+      "Loss:  0.026454376546336464\n",
+      "Accuracy:  0.9166666666666666\n",
+      "\n",
+      "Epoch  45\n",
+      "Loss:  0.024922637447201138\n",
+      "Accuracy:  0.925\n",
+      "\n",
+      "Epoch  46\n",
+      "Loss:  0.02436631904732716\n",
+      "Accuracy:  0.925\n",
+      "\n",
+      "Epoch  47\n",
+      "Loss:  0.02378850282720766\n",
+      "Accuracy:  0.925\n",
+      "\n",
+      "Epoch  48\n",
+      "Loss:  0.02320256806139823\n",
+      "Accuracy:  0.925\n",
+      "\n",
+      "Epoch  49\n",
+      "Loss:  0.01688443590944831\n",
+      "Accuracy:  0.9666666666666667\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.train(X_train, y_train, 50, batch_size=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.train(X_train, y_train, epochs=1000, batch_size=1)"
+    "model.set_parameters(lr=0.1, loss='mse', optimization='sgd')"
    ]
   }
  ],
